@@ -65,7 +65,8 @@
       },
       "test" : {
          "requires" : {
-            "Test2::V0" : "0.000094"
+            "Test2::V0" : "0.000094",
+            "Test::Starch" : "0.12"
          }
       }
    },
