@@ -21,5 +21,6 @@ requires 'Digest::SHA';
 
 on test => sub {
     requires 'Test2::V0' => '0.000094';
+    requires 'Test::Starch' => '0.12';
 };
 
